--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,8 @@ sysinfo.txt
 
 
 # Personal Plugins Distributions
-/[Aa]ssets/[Pp]lugins/Personal Distribution - Lunity
-/[Aa]ssets/[Pp]lugins/Personal Distribution - Lunity.meta
+/[Aa]ssets/[Pp]lugins/Personal Distribution - Lunity (and derivations)
+/[Aa]ssets/[Pp]lugins/Personal Distribution - Lunity (and derivations).meta
 /[Aa]ssets/[Pp]lugins/Personal Distribution - Lunity - for original Moon Motion
 /[Aa]ssets/[Pp]lugins/Personal Distribution - Lunity - for original Moon Motion.meta
 
