--- a/.gitignore
+++ b/.gitignore
@@ -44,10 +44,14 @@ sysinfo.txt
 
 
 # Personal Plugins Distributions
-/[Aa]ssets/[Pp]lugins/Personal Distribution - Lunity (and derivations)
-/[Aa]ssets/[Pp]lugins/Personal Distribution - Lunity (and derivations).meta
 /[Aa]ssets/[Pp]lugins/Personal Distribution - Lunity - for original Moon Motion
 /[Aa]ssets/[Pp]lugins/Personal Distribution - Lunity - for original Moon Motion.meta
+/[Aa]ssets/[Pp]lugins/Personal Distribution - Lunity (and derivations)
+/[Aa]ssets/[Pp]lugins/Personal Distribution - Lunity (and derivations).meta
+/[Aa]ssets/[Pp]lugins/Personal Distribution - Moon Motion derivations
+/[Aa]ssets/[Pp]lugins/Personal Distribution - Moon Motion derivations.meta
+/[Aa]ssets/[Pp]lugins/Personal Distribution - Unitology (and derivations)
+/[Aa]ssets/[Pp]lugins/Personal Distribution - Unitology (and derivations).meta
 
 
 # Raymarching Toolkit for Unity
